--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,11 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
-    testCompileOnly 'org.projectlombok:lombok:1.18.12'
+    testCompileOnly (
+            'org.hamcrest:hamcrest-all:1.3',
+            'org.projectlombok:lombok:1.18.12',
+            'org.mockito:mockito-core:2.19.0'
+    )
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
 }
 
@@ -36,7 +40,6 @@ application {
     // Define the main class for the application.
     mainClassName = 'vending_sim.App'
 }
-
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
